CW#575: Fix incorrect replacement